# trendflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
docs/: api.md  architecture.md  index.md  installation.md  usage.md
src/trendflow/: __init__.py  _exporters.py  _fetcher.py  _parsers.py  cli.py  enums.py  models.py  utils.py
src/trendflow/_trends_http/: __init__.py  endpoints.py  exceptions.py  session.py  transport.py
tests/: conftest.py  test_enums.py  test_exceptions.py  test_exporters.py  test_fetcher.py  test_models.py  test_parsers.py  test_session.py  test_transport.py  test_trendflow.py
