[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trendflow-py"
version = "0.1.1"
description = "A type-safe Python library for querying, streaming, and exporting Google Trends data"
readme = "README.md"
authors = [
  {name = "Dario Mory", email = "dario@mory.dev"}
]
maintainers = [
  {name = "Dario Mory", email = "dario@mory.dev"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "httpx",
  "pandas",
  "rich",
  "typer",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/dariomory/trendflow/issues"
changelog = "https://github.com/dariomory/trendflow/releases"
documentation = "https://dariomory.github.io/trendflow/"
homepage = "https://github.com/dariomory/trendflow"

[project.scripts]
trendflow = "trendflow.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trendflow"]

[tool.uv]
package = true
default-groups = ["dev"]
